Wrapped all the alert details in a div which hides upon loading. CSS fixes

--- a/public/assets/less/alert.details.less
+++ b/public/assets/less/alert.details.less
@@ -1,3 +1,14 @@
 #alert-details #alert-info {
     margin-bottom: 0.5rem;
 }
+
+#alert-details .divider {
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+}
+
+#alert-details .card-no-bottom {
+    .card {
+        margin-bottom: 0;
+    }
+}
